--- a/MapViewController.storyboard
+++ b/MapViewController.storyboard
@@ -18,9 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fKR-09-V2S">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fKR-09-V2S" customClass="GMSMapView">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <color key="backgroundColor" red="0.27721063404212487" green="1" blue="0.55235350761642854" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -32,6 +31,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="NQM-dJ-fJl"/>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="fKR-09-V2S" id="H65-n0-CQ0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gMB-4t-020" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
